--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,10 @@
 {
   "version": 2,
   "name": "sei-control",
-  "builds": [
-    {
-      "src": "**/*",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
     {
-      "handle": "filesystem"
-    },
-    {
       "src": "/(.*)",
-      "status": 404,
-      "dest": "/index.html"
+      "dest": "/$1"
     }
   ],
   "headers": [
@@ -34,24 +24,6 @@
           "value": "1; mode=block"
         }
       ]
-    },
-    {
-      "source": "/src/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
     }
-  ],
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/index.html",
-      "permanent": false
-    }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  ]
 }
